--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,43 @@
-.text-input, #radio-input {    
+* {
+    font-family: "Michroma", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+body {
+    justify-self: center;
+    font-size: 1.25em;
+}
+
+#header {
+    justify-self: center;
+}
+
+h2 {
+    justify-self: center;
+}
+
+.text-input {    
     display: flex;
     justify-content: space-between;
 }
 
 dialog {
-    width: 19vw;
+    width: 20em;
     border-radius: 0.5em;
     padding: 2em;
 }
 
 .book-div {
-    border: 1px solid;
+    text-align:center;
+    border-radius: 0.5em;
+    padding: 1em;
+    box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.25);
+}
+
+#books-container {
+    /* width:em; */
+    gap: 2em;
+    display: grid;
+    grid-template-columns: repeat( 3, minmax(2em, 1fr) );
 }
