--- a/styles.css
+++ b/styles.css
@@ -33,10 +33,10 @@ dialog {
     border-radius: 0.5em;
     padding: 1em;
     box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.25);
+    border-left: 0.5em solid slateblue;
 }
 
 #books-container {
-    /* width:em; */
     gap: 2em;
     display: grid;
     grid-template-columns: repeat( 3, minmax(2em, 1fr) );
